--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,9 @@
 \usepackage{mathrsfs}
 \usepackage[mathcal]{euscript}
 \usepackage{mathtools}
+\usepackage{soul}
 %\usepackage{wasysym}
+
 
 %clever ref package 
 %must come before following 3 sections
@@ -103,7 +105,8 @@
 \newcommand{\rep}{\operatorname{rep}}
 \newcommand{\lis}{\operatorname{list}}
 \newcommand{\Q}{\mathcal{Q}}
-\newcommand{\N}{\mathrm{N}}
+%\newcommand{\N}{\mathrm{N}}
+\newcommand{\N}{\mathcal{N}}
 \newcommand{\M}{\mathrm{M}}
 \renewcommand{\O}{\mathcal{O}}
 \newcommand{\Z}{\mathcal{Z}}
@@ -115,13 +118,15 @@
 \newcommand{\orep}{\mathbb{O}}
 \newcommand{\witt}{\mathfrak{W}}
 \newcommand{\graph}{\mathcal{S}}
-
+\newcommand{\sierp}{\mathscr{S}}
+\newcommand{\fip}{\Sigma}
 
 %sets
 \newcommand{\kk}{\Bbbk}
 \newcommand{\LL}{\mathbb{L}}
 \newcommand{\FF}{\mathbb{F}}
 \newcommand{\RR}{\mathbb{R}}
+\newcommand{\RRnn}{\mathbb{R}_{\ge 0}}
 \newcommand{\CC}{\mathbb{C}}
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\QQ}{\mathbb{Q}}
