--- a/preamble.tex
+++ b/preamble.tex
@@ -120,6 +120,9 @@
 \newcommand{\graph}{\mathcal{S}}
 \newcommand{\sierp}{\mathscr{S}}
 \newcommand{\fip}{\Sigma}
+%\newcommand{\sproutsfrom}[2]{#1 \leftarrow #2}
+\newcommand{\sproutsfrom}[2]{#1 \mathrel{ \text{---} \mathllap{>} } #2}
+%\newcommand{\sproutsfrom}[2]{#1 \in \operatorname{sp} #2}
 
 %sets
 \newcommand{\kk}{\Bbbk}
